# ruvector

./: VECGRAPH_INTEGRATION_REPORT.md
crates/ruvix/: AGENT3_REPORT.md  Cargo.toml  SHELL_DEMO.md  test-shell.sh
crates/ruvix/aarch64-boot/: Cargo.toml  build.rs
crates/ruvix/aarch64-boot/.cargo/: config.toml
crates/ruvix/aarch64-boot/src/: boot.S  main.rs  shell_backend.rs
crates/ruvix/crates/cap/: Cargo.toml
crates/ruvix/crates/nucleus/: Cargo.toml
crates/ruvix/crates/queue/: Cargo.toml
crates/ruvix/crates/region/: Cargo.toml
crates/ruvix/crates/region/src/: manager.rs
crates/ruvix/docs/: SUPERCLAW-BRIDGE-SPEC.md
crates/ruvix/examples/vecgraph_demo/: Cargo.toml  README.md
crates/ruvix/examples/vecgraph_demo/src/: main.rs
docs/: AIOS-COMPARISON.md
