[package]
name = "ruvix-kernel"
version = "0.1.0"
edition = "2021"
authors = ["SuperClaw Contributors"]

[workspace]

# Minimal deps — just bare metal + capability system
[dependencies]
ruvix-types = { path = "../crates/types", default-features = false }
ruvix-cap = { path = "../crates/cap", default-features = false, features = ["alloc"] }
ruvix-shell = { path = "../crates/shell", default-features = false }

[build-dependencies]
vergen = { version = "8", default-features = false, features = ["build", "git", "gitcl"] }

[[bin]]
name = "ruvix-kernel"
path = "src/main.rs"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
panic = "abort"
